terraform/aws/modules/vpc/routing_table/route_table_association.tf
resource "aws_route_table_association" "subnet-003dab95b1493d5fa" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-003dab95b1493d5fa"
}

resource "aws_route_table_association" "subnet-015e798b75c0de098" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-015e798b75c0de098"
}

resource "aws_route_table_association" "subnet-02b223e2785f190c1" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-02b223e2785f190c1"
}

resource "aws_route_table_association" "subnet-0339b072df6a1f486" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-0339b072df6a1f486"
}

resource "aws_route_table_association" "subnet-04a5ac2a7fffbed68" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-04a5ac2a7fffbed68"
}

resource "aws_route_table_association" "subnet-04c9b47d914fa5461" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-04c9b47d914fa5461"
}

resource "aws_route_table_association" "subnet-05d8216aae98ac02b" {
  route_table_id = "rtb-00a97f093a3ce2a8f"
  subnet_id      = "subnet-05d8216aae98ac02b"
}

resource "aws_route_table_association" "subnet-063c43dc372b616d0" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-063c43dc372b616d0"
}

resource "aws_route_table_association" "subnet-080023701a8f39f8e" {
  route_table_id = "rtb-00a97f093a3ce2a8f"
  subnet_id      = "subnet-080023701a8f39f8e"
}

resource "aws_route_table_association" "subnet-0898d23f8673a80fa" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-0898d23f8673a80fa"
}

resource "aws_route_table_association" "subnet-0899bf2f236807e2f" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-0899bf2f236807e2f"
}

resource "aws_route_table_association" "subnet-0a35bdac0d3d5b133" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-0a35bdac0d3d5b133"
}

resource "aws_route_table_association" "subnet-0a9fb80235b63192a" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-0a9fb80235b63192a"
}

resource "aws_route_table_association" "subnet-0b19dac5d6c6360cc" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-0b19dac5d6c6360cc"
}

resource "aws_route_table_association" "subnet-0da14af7f50989dc1" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-0da14af7f50989dc1"
}

resource "aws_route_table_association" "subnet-0de1d566137ba344a" {
  route_table_id = "rtb-0ab4555e00785a362"
  subnet_id      = "subnet-0de1d566137ba344a"
}

resource "aws_route_table_association" "subnet-0fcfb791396759d4f" {
  route_table_id = "rtb-00a97f093a3ce2a8f"
  subnet_id      = "subnet-0fcfb791396759d4f"
}
